Change Default namespace to IBM.Cloudant.Client

--- a/src/CloudantClient.PCL/CloudantClient.PCL.csproj
+++ b/src/CloudantClient.PCL/CloudantClient.PCL.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{FD75F05F-7BB5-4735-A0F2-901CCDD7722D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Com.Cloudant.Client</RootNamespace>
+    <RootNamespace>IBM.Cloudant.Client</RootNamespace>
     <AssemblyName>CloudantClient.PCL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
