Use Custom Json Serialisers and Deserialisers
Create and use custom JSON serialisers and deserialisers centralising the
JSON handling logic in one place.

Resolves #28

--- a/src/CloudantClient.PCL/CloudantClient.PCL.csproj
+++ b/src/CloudantClient.PCL/CloudantClient.PCL.csproj
@@ -50,6 +50,11 @@
     <Compile Include="src\SortSyntax.cs" />
     <Compile Include="src\IndexType.cs" />
     <Compile Include="src\TextIndexField.cs" />
+    <Compile Include="src\DocumentRevisionConverter.cs" />
+    <Compile Include="src\QueryDocumentRevisionConverter.cs" />
+    <Compile Include="src\ListIndicesConverter.cs" />
+    <Compile Include="src\IndexConverter.cs" />
+    <Compile Include="src\SortFieldConverter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
