Use Visual Studio formatting template with 120 line length

--- a/src/Test.Android/Test.Android.csproj
+++ b/src/Test.Android/Test.Android.csproj
@@ -14,7 +14,7 @@
     <AndroidApplication>True</AndroidApplication>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
     <AssemblyName>Test.Android</AssemblyName>
-    <TargetFrameworkVersion>v5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <Description>Runs the automated tests in the Android environment.</Description>
   </PropertyGroup>
@@ -68,8 +68,8 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
   </ItemGroup>
   <Import Project="..\Test.Shared\Test.Shared.projitems" Label="Shared" Condition="Exists('..\Test.Shared\Test.Shared.projitems')" />
-  <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\CloudantClient.PCL\CloudantClient.PCL.csproj">
       <Project>{FD75F05F-7BB5-4735-A0F2-901CCDD7722D}</Project>
