Add Andoird support v7 to Android sample

--- a/samples/CrossPlatformSample/Droid/packages.config
+++ b/samples/CrossPlatformSample/Droid/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoAndroid51" />
   <package id="Xamarin.Android.Support.v4" version="22.2.1.0" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Android.Support.v4" version="23.1.1.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.1.1.0" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="MonoAndroid51" />
 </packages>
